# challenge-threadx-playRemote

./: .gitignore  .gitmodules  LICENSE  README.md
MXChip/AZ3166/: CMakeLists.txt
MXChip/AZ3166/app/: CMakeLists.txt  board_init.c  board_init.h  cloud_config.h  main.c  main_iav.c  someip_vehicle_signals.cpp  someip_vehicle_signals.h  someip_vehicle_signals_stub.c  wwd_networking.c
MXChip/AZ3166/app/opensomeip_compat/lwip/: def.h  inet.h  netdb.h  sockets.h
MXChip/AZ3166/lib/: CMakeLists.txt
MXChip/AZ3166/lib/mxchip_bsp/ssd1306/: ssd1306_conf.h
MXChip/AZ3166/lib/threadx/: tx_user.h
MXChip/AZ3166/scripts/: build-with-someip.bat  build-with-someip.sh
shared/src/: newlib_nano.c
